[+] fix pom.xml for jenkins

--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,7 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>testNG.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <systemPropertyVariables>
-                        <allure.results.directory>${project.build.directory}\allure-results</allure.results.directory>
-                    </systemPropertyVariables>
+
                 </configuration>
             </plugin>
 
@@ -63,7 +61,7 @@
                         </fileset>
                         <fileset>
                             <directory>target/</directory>
-                            <followSymlinks>true</followSymlinks>
+                            <followSymlinks>false</followSymlinks>
                             <includes>
                                 <include>**/*</include>
                             </includes>
