[+] fix imported libs versions

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,17 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-server</artifactId>
-            <version>3.10.0</version>
+            <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
+            <version>3.141.59</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
         <dependency>
@@ -101,9 +111,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.atlasmap</groupId>
+            <groupId>io.qameta.atlas</groupId>
             <artifactId>atlas-core</artifactId>
-            <version>1.43.4</version>
+            <version>1.8.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.qameta.atlas/atlas-webdriver -->
         <dependency>
@@ -115,7 +125,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-api</artifactId>
-            <version>3.14.0</version>
+            <version>3.141.59</version>
         </dependency>
 
 
