[+] Add Matcher, PageManager

--- a/src/main/resources/config
+++ b/src/main/resources/config
@@ -3,6 +3,6 @@
   "element.wait" :30,
   "element.poling" :500,
   "element.exist" :2,
-  "parralel.tests":true,
-  "parralel.suite":false
+  "parallel.tests":true,
+  "parallel.suite":false
 }
