--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,17 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <forkCount>0</forkCount>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testNG.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <plugin>
@@ -77,7 +81,9 @@
 
     </build>
 
+
     <dependencies>
+
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -108,7 +114,7 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.0-BETA3</version>
+            <version>2.7.0</version>
         </dependency>
 
         <dependency>
@@ -162,5 +168,6 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <aspectj.version>1.9.1</aspectj.version>
     </properties>
 </project>
