[+]fix scroll in jenkins2

--- a/src/main/resources/config
+++ b/src/main/resources/config
@@ -1,5 +1,5 @@
 {
-  "browser.driver" : "CHROME",
+  "browser.driver" : "CHROsME",
   "element.wait" :30,
   "element.poling" :500,
   "element.exist" :2,
