--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,7 @@
 
     </dependencies>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.5</aspectj.version>
     </properties>
 </project>
