--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                 <version>2.20</version>
                 <configuration>
                     <argLine>
-                        -Dfile.encoding=UTF-8 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        -Dfile.encoding=CP1251 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                 </configuration>
                 <dependencies>
@@ -167,7 +167,7 @@
 
     </dependencies>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>CP1251</project.build.sourceEncoding>
         <aspectj.version>1.9.5</aspectj.version>
     </properties>
 </project>
