fix pom.xml for jenkins

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
                     <argLine>
                         -Dfile.encoding=CP1251 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testNG.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
                 <dependencies>
                     <dependency>
